Update SITL docs